--- a/honors_awards.htm
+++ b/honors_awards.htm
@@ -348,21 +348,33 @@ Supervision/Co-Supervision</span></p>
 <p class="MsoNormal" style="line-height: 200%; ">
 <span lang="en-US" style="font-size: 14.0pt; line-height: 200%; font-family: Times New Roman; font-weight: bold; text-decoration:underline">
 Postdoctoral researchers: </span></p>
+<p class="MsoNormal" style="line-height: 200%; ">
+<span style="font-family: Times New Roman"><font size="4">-- Dr. <b>Licai Sun</b>: 
+2024-present</font></span></p>
+<p class="MsoNormal" style="line-height: 200%; ">
+<span style="font-family: Times New Roman"><font size="4">-- Dr. <b>Kejuan Yue</b>: 
+2024-present</font></span></p>
 <p style="line-height: 200%" class="MsoNormal">
 <font size="4"><span style="font-family: Times New Roman">--&nbsp;Dr. <b>Jukka 
-Komulainen</b>: 2022-present</span></font></p>
+Komulainen</b>: 2022-2023</span></font></p>
+<p style="line-height: 200%" class="MsoNormal">
+<font size="4"><span style="font-family: Times New Roman">-- Dr. <b>Haoyu Chen</b>: 
+2022-2024</span></font></p>
+<p style="line-height: 200%" class="MsoNormal">
+<font size="4"><span style="font-family: Times New Roman">-- Dr. <b>Yante Li</b>: 
+2022-present</span></font></p>
 <p style="line-height: 200%" class="MsoNormal">
 <font size="4"><span style="font-family: Times New Roman">-- Dr. <b>Yang Liu</b>: 
-2022-present</span></font></p>
+2022-2024</span></font></p>
 <p style="line-height: 200%" class="MsoNormal">
 <font size="4"><span style="font-family: Times New Roman">-- Dr. <b>Qianru Xu</b>: 
 2021-present</span></font></p>
 <p style="line-height: 200%" class="MsoNormal">
 <font size="4"><span style="font-family: Times New Roman">-- Dr. <b>Hanlin Mo</b>: 
-2021-present</span></font></p>
+2021-2024</span></font></p>
 <p style="line-height: 200%" class="MsoNormal">
 <font size="4"><span style="font-family: Times New Roman">-- Dr. <b>Kevin 
-Cheng</b>: 2021-present</span></font></p>
+Cheng</b>: 2020-2022</span></font></p>
 <p style="line-height: 200%" class="MsoNormal">
 <span style="font-family: Times New Roman"><font size="4">--&nbsp;Dr. <b>Xin Liu</b>: 
 2019-</font></span><font size="4"><span style="font-family: Times New Roman">2020</span></font></p>
@@ -396,6 +408,32 @@ Ghahramani</b>: 2012-2013</font></span></p>
 <span lang="en-US" style="font-family: Times New Roman"><font size="4">&nbsp;</font></span><span lang="en-US" style="font-size: 14.0pt; line-height: 200%; font-family: Times New Roman; font-weight: bold; text-decoration:underline">Ph. 
 D. dissertations:</span></p>
 <p class="MsoNormal" style="line-height: 200%">
+<font face="Times New Roman" size="4">-- Ms. <b>Boshra Najari</b>, Ph.D. 
+student: 2023-present&nbsp; (Co-Supervisor)</font></p>
+<p class="MsoNormal" style="line-height: 200%">
+<font face="Times New Roman" size="4">-- Mr. <b>Samuel Boccara</b>, Ph.D. 
+student: 2022-present&nbsp; (Main Supervisor)</font></p>
+<p class="MsoNormal" style="line-height: 200%">
+<font face="Times New Roman" size="4">-- Mr. <b>Hao Yu</b>, Ph.D. student: 
+2022-present&nbsp; (Main Supervisor)</font></p>
+<p class="MsoNormal" style="line-height: 200%">
+<font face="Times New Roman" size="4">-- Mr. <b>Huai-Qian Khor</b>, Ph.D. 
+student: 2024-present&nbsp; (Main Supervisor)</font></p>
+<p class="MsoNormal" style="line-height: 200%">
+<font face="Times New Roman" size="4">-- Mr. <b>Ali Salar</b>, Ph.D. student: 
+2024-present&nbsp; (Main Supervisor)</font></p>
+<p class="MsoNormal" style="line-height: 200%">
+<font face="Times New Roman" size="4">--
+<b>Ms. Hui Zhang</b>, Ph.D. student: 2022-present&nbsp; (Main Supervisor)</font></p>
+<p class="MsoNormal" style="line-height: 200%">
+<font face="Times New Roman" size="4">--
+<b>Ms. Mengting Wei</b>, Ph.D. student: 2023-present&nbsp; (Main Supervisor)</font></p>
+<p class="MsoNormal" style="line-height: 200%">
+<span style="font-family: Times New Roman; font-weight: 700; font-size: 14pt" lang="en-us">
+-- Mr. Haotian Liu, </span>
+<font face="Times New Roman" size="4">Ph.D. student: 2023-present&nbsp; 
+(Co-Supervisor)</font></p>
+<p class="MsoNormal" style="line-height: 200%">
 <font face="Times New Roman" size="4">--
 <b>Ms. Hui Zhang</b>, Ph.D. student: 2022-present&nbsp; (Main Supervisor)</font></p>
 <p class="MsoNormal" style="line-height: 200%">
@@ -412,33 +450,36 @@ D. dissertations:</span></p>
 <b>Mr. Abdelrahman Mostafa</b>, Ph.D. student: 2020-present (Main Supervisor)</font></p>
 <p style="line-height: 200%" class="MsoNormal">
 <font face="Times New Roman" size="4">--
-<b>Mr. Zitong Yu</b>, Ph.D. student: 2018-present: Physiological signal analysis 
-and applications (Main Supervisor)</font></p>
+<b>Mr. Zitong Yu</b>, Ph.D. stude</font><font face="Times New Roman" size="4">nt: 2018-2022: 
+Physiological signals measurement and spoofing detection from face video (Main Supervisor. 
+Pass with distinction)</font></p>
 <p style="line-height: 200%" class="MsoNormal">
 <font face="Times New Roman" size="4">--
-<b>Mr. Muzammil Behzad</b>, Ph.D. student: 2018-present: 4D micro-expression 
-analysis (Main Supervisor)</font></p>
+<b>Mr. Muzammil Behzad</b>, Ph.D. student: 2018-2022: Deep Learning Methods for 
+Analyzing Vision-Based Emotion Recognition from 3D/4D Facial Point Clouds (Main Supervisor. 
+Pass with distinction)</font></p>
 <p class="MsoNormal" style="line-height: 200%">
 <font face="Times New Roman" size="4">-- <b>Mr. Wei Peng</b>: Ph.D. student: 
-2018-present: Multi-modal learning (Main Supervisor)</font></p>
+2018-2022: Automatic neural network learning for human behavior understanding (Main Supervisor. 
+Pass with distinction)</font></p>
 <p style="line-height: 200%" class="MsoNormal">
 <font face="Times New Roman" size="4">--
-<b>Mr. Henglin Shi</b>: Ph.D. student: 2017-present: Learning based gesture and 
+<b>Mr. Henglin Shi</b>: Ph.D. student: 2017-2023: Learning based gesture and 
 micro-gesture analysis (Main Supervisor)</font></p>
 <p style="line-height: 200%" class="MsoNormal">
 <font face="Times New Roman" size="4">--
-<b>Mr. Haoyu Chen</b>: Ph.D. student: 2017-present: Non-communicative behavior 
-analysis with computer vision methods for hidden emotion understanding (Main 
+<b>Mr. Haoyu Chen</b>: Ph.D. student: 2017-2022: Human gesture and micro-gesture 
+analysis: datasets, methods, and applications (Main 
+Supervisor. Pass with distinction)</font></p>
+<p style="line-height: 200%" class="MsoNormal">
+<font face="Times New Roman" size="4">--
+<b>Ms. Yante Li</b>, Ph.D. student: 2017-2022: Machine learning for perceiving 
+facial micro-expression (Main 
 Supervisor)</font></p>
 <p style="line-height: 200%" class="MsoNormal">
 <font face="Times New Roman" size="4">--
-<b>Ms. Yante Li</b>, Ph.D. student: 2017-present: Quantifying Human Experience for 
-Increased Intelligence Within Work Teams and in the Customer Interface (Main 
-Supervisor)</font></p>
-<p style="line-height: 200%" class="MsoNormal">
-<font face="Times New Roman" size="4">--
-<b>Mr. Khanh Tran-Thuong</b>: Ph. D. student: 2016-present: Micro-expression 
-analysis (Main Supervisor)</font></p>
+<b>Mr. Khanh Tran-Thuong</b>: Ph. D. student: 2016-2024: Micro-expression 
+spotting based on supervised learning (Main Supervisor)</font></p>
 <p class="MsoNormal" style="line-height: 200%">
 <font size="4" face="Times New Roman">-- <b>Ms. Yingyue Xu</b>: Computational Modeling for 
 Visual Attention Analysis, 2015-20</font><font size="4"><span style="font-family: Times New Roman">20 </span>
@@ -490,15 +531,17 @@ Vision-based human motion description and recognition, 2006-2011 (Advisor)</font
 <span lang="en-US" style="font-size: 14.0pt; line-height: 200%; font-family: Times New Roman; font-weight: bold; text-decoration:underline">
 Master theses:</span></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; margin-left: 21.0pt">
-<font size="4"><span style="font-family: Times New Roman">Mr. </span></font>
-		<b><font face="Times New Roman">Yar Moe M</font></b><font face="Times New Roman"><b><span lang="zh-cn">YINT </span></b></font>
-<font size="4"><span style="font-family: Times New Roman">(2020-);</span></font></p>
+<font size="4"><span style="font-family: Times New Roman">Ms. <b>Vijaya Mohanakrishnan Nair</b> 
+(2024-);</span></font></p>
+<p style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; margin-left: 21.0pt">
+<font size="4"><span style="font-family: Times New Roman">Mr. <b>Sabin Bhatta</b> 
+(2024-);</span></font></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; margin-left: 21.0pt">
 <span style="font-family: 'Times New Roman'; "><font size="4">Ms. <b>Mei 
-Ren </b>(2019-); </font> </span></p>
+Ren </b>(2019-2022); </font> </span></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; margin-left: 21.0pt">
 <font face="Times New Roman" size="4">Mr. <b>
-Qiang Gao </b>(2019-)</font><span style="font-family: 'Times New Roman'; "><font size="4">;
+Qiang Gao </b>(2019-2022)</font><span style="font-family: 'Times New Roman'; "><font size="4">;
 </font>
 </span></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; margin-left: 21.0pt">
@@ -506,18 +549,18 @@ Qiang Gao </b>(2019-)</font><span style="font-family: 'Times New Roman'; "><font
 Shengkang Wang </b>(2019-);</font><b><font size="4"> </font> </b></span></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; margin-left: 21.0pt">
 <font face="Times New Roman" size="4">Mr. <b>
-Chensong Huo </b>(2018-)</font><span style="font-family: 'Times New Roman'; "><font size="4">;
+Chensong Huo </b>(2018-2021)</font><span style="font-family: 'Times New Roman'; "><font size="4">;
 </font>
 </span></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; margin-left: 21.0pt">
 <span style="font-family: 'Times New Roman'; "><font size="4">Ms. <b>
-Tingting Wu </b>(2018-);</font><b><font size="4"> </font> </b></span></p>
+Tingting Wu </b>(2018-2021);</font><b><font size="4"> </font> </b></span></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; margin-left: 21.0pt">
 <span style="font-family: 'Times New Roman'; "><font size="4">Ms. <b>
-Kaikai Wang </b>(2018-);</font><b><font size="4"> </font> </b></span></p>
+Kaikai Wang </b>(2018-2021);</font><b><font size="4"> </font> </b></span></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; margin-left: 21.0pt">
 <span style="font-family: 'Times New Roman'; "><font size="4">Mr. <b>
-Jianbo Li </b>(2018-); </font> </span></p>
+Jianbo Li </b>(2018-2021); </font> </span></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; margin-left: 21.0pt">
 <span style="font-family: Times New Roman"><font size="4">Mr. <b>Tuomas Varanka</b> 
 (2019-2020);</font></span></p>
