--- a/main_experience.htm
+++ b/main_experience.htm
@@ -116,9 +116,11 @@ Projects as PI or Co-PI (Raised in total ~11.3 million EUR for my team):</span><
 	4%.</font></span></li>
 	<li>
 	<p class="MsoListParagraphCxSpFirst" style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; line-height: 150%; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt; margin-bottom: 0cm">
-	<font size="4"><span style="color: black">2024.03-2028.02 (No. ACMod 
-	101130271): HORIZON-MSCA-SE-2022: Affective Computing Models: from Facial 
-	Expression to Mind-Reading (ACMod). 1 656 000 &#8364; (Consortium Coordinator)</span></font></li>
+	<span style="color: black">
+	<font size="4">2024.03-2028.02 (No. ACMod 
+	101130271, funded </font></span><font size="4"><span style="color: black">by 
+	funded by European Commission):</span></font><span style="color: black"><font size="4"> HORIZON-MSCA-SE-2022: Affective Computing Models: from Facial 
+	Expression to Mind-Reading (ACMod). 1 656 000 &#8364; (Consortium Coordinator)</font></span></li>
 	<li>
 	<p class="MsoListParagraphCxSpFirst" style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; line-height: 150%; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt; margin-bottom: 0cm">
 	<font size="4"><span style="color: black">2023.01-2028.12: Funding to 
@@ -134,8 +136,8 @@ Projects as PI or Co-PI (Raised in total ~11.3 million EUR for my team):</span><
 	<li>
 	<p class="MsoListParagraphCxSpFirst" style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; line-height: 150%; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt; margin-bottom: 0cm">
 	<font size="4"><span style="color: black">2024.06-2025.06: MFM Medical 
-	Foundation Model: LUMI supercomputer Extreme Scale Access (CSC ¨C IT Center 
-	for Science Finland project 462000616).</span></font></li>
+	Foundation Model: LUMI supercomputer Extreme Scale Access (CSC-IT Center 
+	for Science Finland project).</span></font></li>
 	<li>
 	<p class="MsoListParagraphCxSpFirst" style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; line-height: 150%; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt; margin-bottom: 0cm">
 	<font size="4"><span style="color: black">2023.02-2025.02: FARIA (The 
