--- a/teammembers.htm
+++ b/teammembers.htm
@@ -138,9 +138,10 @@ span.contentpasted0
 	</tr>
 	<tr>
 		<td height="0" align="center" valign="top" width="225">
-		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
+		<p style="text-align: center; ">
 		<b>
-		<font face="Times New Roman">Ms. Mengting W</font>EI</b></td>
+		<font face="Times New Roman">Ms. Mengting WEI</font></b><p>
+		<b><font face="Times New Roman">(ELLIS PhD student)</font></b></td>
 		<td height="0" align="center" valign="top" width="225">
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
 		<font face="Times New Roman"><b>Mr. Haotian LIU</b></font></td>
@@ -151,7 +152,8 @@ span.contentpasted0
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
 		<font face="Times New Roman"><b>Ali S</b></font><span lang="en-us"><b>ALAR</b></span></td>
 		<td height="0" align="center" valign="top" width="225">
-		<font face="Times New Roman"><b>Mr. Hao Y</b></font><span lang="en-us"><b><font face="Times New Roman">U</font></b></span></td>
+		<font face="Times New Roman"><b>Mr. Hao Y</b></font><span lang="en-us"><b><font face="Times New Roman">U</font></b></span><p style="text-align: center">
+		<span lang="en-us"><b>(ELLIS PhD student)</b></span></td>
 	</tr>
 	<tr>
 		<td width="223" height="0" align="center" valign="top">
