--- a/personal.htm
+++ b/personal.htm
@@ -67,8 +67,8 @@ authored or co-authored more than <span lang="en-us">340</span> papers in journa
 has served </span> </font>
 <span style="font-family: Times New Roman; font-weight: normal"><font size="4">
 as a reviewer for many journals and conferences. Her papers have currently over 
-284<span lang="en-us">00</span> citations in Google Scholar 
-(h-index 84). She i</font></span><font size="4"><span style="font-family: Times New Roman; font-weight: normal">s
+302<span lang="en-us">00</span> citations in Google Scholar 
+(h-index 85). She i</font></span><font size="4"><span style="font-family: Times New Roman; font-weight: normal">s
 <span style="font-weight: normal; font-family: Times New Roman">&nbsp;</span>Associate 
 Editor in Chief for Computer Vision and Image Understanding (CVIU), tutorial <span lang="en-us">c</span>hair for ICPR 
 2024, panel chair for FG 2023, and publicity chair for SCIA 2023. S</span><span style="font-family: Times New Roman">he </span>
@@ -91,8 +91,8 @@ IEEE Trans. on Multimedia, IEEE Trans. on Circuits and Systems for
 Video Technology, Image and Vision Computing, Frontiers in Psychology, Journal 
 of Electronic Imaging, and International Journal of Network Dynamics and 
 Intelligence Journals. She has lectured tutorials at FG<span lang="en-us"> 2018, </span>SCIA 
-2013, ICCV 2009 and ICPR 2006, and authored/edited three books and <span lang="en-us">nine</span> special issues in 
-journals. Dr. Zhao was a Co-Chair of 23 International Workshops / special 
+2013, ICCV 2009 and ICPR 2006, and authored/edited three books and <span lang="en-us">nine</span> 
+special issues in journals. Dr. Zhao was a Co-Chair of many International Workshops / special 
 sessions in top venues, such as ICCV, 
 CVPR, ECCV, ACCV and FG. Her students <span lang="en-us">and 
 researchers </span>are 
