--- a/honors_awards.htm
+++ b/honors_awards.htm
@@ -172,6 +172,10 @@ Finnish Academy of Sciences and Letters, 2022-.</u></font></b></font></p>
 IEEE Fellow (for contributions to facial expression analysis and feature 
 representation), 2022-.</span></font></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
+<font size="4"><span style="font-family: Times New Roman">-- </span></font><b>
+<u><font face="Times New Roman" size="4">Winner for the 2024 IAPR Maria Petrou 
+Prize.</font></u></b></p>
+<p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
 <font size="4">
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman">
 -- Award of Academy Professor from
