--- a/publications.htm
+++ b/publications.htm
@@ -259,7 +259,7 @@ Augmentation Might Be Toxic: Data-prior Guided Self-supervised Representation
 Learning for Micro-gesture Recognition</u>. FG 2024.</font></p>
 <p class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
 <span lang="en-us"><font size="4">&nbsp;321. </font></span><font size="4">
-Zhaodong Sun, Xiaobai, Jukka Komulainen, <b>Guoying Zhao</b>. Biometric 
+Zhaodong Sun, Xiaobai Li, Jukka Komulainen, <b>Guoying Zhao</b>. Biometric 
 Authentication Based on Enhanced Remote Photoplethysmography Signal Morphology. 
 IEEE International Joint Conference on Biometrics 2024.<span lang="en-us">
 </span>(<b>Best Paper Runner Up award</b>)</font></p>
