--- a/professional_activities.htm
+++ b/professional_activities.htm
@@ -441,6 +441,15 @@ Aug. 20-24, 2006, Hongkong.</font></span></p>
 <font size="4">
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US">
 --</span></font><span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US"><font size="4">&nbsp;</font></span><span style="font-family: 'Times New Roman'; font-weight: 700" lang="en-us"><u><font size="4">Invited talks:</font></u></span></p>
+<p style="text-align: justify; text-justify: inter-ideograph; margin-left: 21.0pt; margin-top:8px; margin-bottom:8px; text-autospace:ideograph-numeric ideograph-other" class="MsoNormal">
+<font size="4">18th Chinese Conference on Biometric Recognition (CCBR) 2024, 
+Nov. 22-24, Nanjing, China.</font></p>
+<p style="text-align: justify; text-justify: inter-ideograph; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt; margin-top: 8px; margin-bottom: 8px" class="MsoNormal">
+<font size="4">Earth &amp; Space£ºfrom Infrared to Terahertz International Conference 
+(ESIT) 2024, Sep. 20-22, Hangzhou, China.</font></p>
+<p style="text-align: justify; text-justify: inter-ideograph; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt; margin-top: 8px; margin-bottom: 8px" class="MsoNormal">
+<font size="4">IJCAI 2024 workshop on Deep Learning for Human Activity 
+Recognition, Aug. 3, 2024, Jeju, South Korea</font></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt; margin-top:8px; margin-bottom:8px" class="MsoNormal">
 <font size="4">CVPR 2024 workshop on Women in Computer Vision<span lang="en-us"> 
 (WiCV)</span>, Jun. 18, 2024, Seattle, USA</font></p>
