--- a/personal.htm
+++ b/personal.htm
@@ -67,8 +67,8 @@ authored or co-authored more than <span lang="en-us">340</span> papers in journa
 has served </span> </font>
 <span style="font-family: Times New Roman; font-weight: normal"><font size="4">
 as a reviewer for many journals and conferences. Her papers have currently over 
-302<span lang="en-us">00</span> citations in Google Scholar 
-(h-index 85). She i</font></span><font size="4"><span style="font-family: Times New Roman; font-weight: normal">s
+307<span lang="en-us">00</span> citations in Google Scholar 
+(h-index 86). She i</font></span><font size="4"><span style="font-family: Times New Roman; font-weight: normal">s
 <span style="font-weight: normal; font-family: Times New Roman">&nbsp;</span>Associate 
 Editor in Chief for Computer Vision and Image Understanding (CVIU), tutorial <span lang="en-us">c</span>hair for ICPR 
 2024, panel chair for FG 2023, and publicity chair for SCIA 2023. S</span><span style="font-family: Times New Roman">he </span>
@@ -104,8 +104,10 @@ Scholarsh</span></font><font size="4"><span style="font-family: Times New Roman;
 Endeavour Research Fellowship, Ta</span></font><span style="font-family: Times New Roman; font-weight: normal"><font size="4">uno T&ouml;nning Research funding<span lang="en-us">, 
 Kauta Foundation grant</span> 
 and Jorma Ollila grant. </font> </span><font size="4">
-<span style="font-family: Times New Roman; font-weight: normal">She is </span>
-<span style="font-family: Times New Roman; font-weight: 700">Fellow of</span><span style="font-family: Times New Roman; font-weight: normal"> </span>
+<span style="font-family: Times New Roman; font-weight: normal">She</span><span style="font-family: Times New Roman; font-weight: 700">
+</span><span style="font-family: Times New Roman">is </span>
+<span style="font-family: Times New Roman; font-weight: 700">IAPR 2024 Maria 
+Petrou prize winner, Fellow of</span><span style="font-family: Times New Roman; font-weight: normal"> </span>
 <span style="font-family: Times New Roman; font-weight: 700">IEEE</span><span style="font-family: Times New Roman; font-weight: normal">, </span>
 <span style="font-family: Times New Roman; font-weight: 700">IAPR, ELLIS</span><span style="font-family: Times New Roman; font-weight: normal"> and </span>
 <span style="font-family: Times New Roman; font-weight: 700">AAIA</span><span style="font-family: Times New Roman; font-weight: normal">. 
