--- a/publications.htm
+++ b/publications.htm
@@ -148,6 +148,15 @@ Jan. 2018.</font></p>
 <span lang="EN-US">
 <font size="4">Nov. 2020.</font></span></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
+<span lang="en-us"><font size="5"><b>2025</b></font></span></p>
+<p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
+<font face="Times New Roman" size="4">&nbsp;344. Hao Yu, Haoyu Chen, Wei Peng, 
+Xu Cheng, <b>Guoying Zhao</b>.
+<a target="_blank" href="https://openreview.net/forum?id=orSt7BTll2&referrer=%5BAuthor%20Console%5D(%2Fgroup%3Fid%3DAAAI.org%2F2025%2FConference%2FAuthors%23your-submissions)">
+FreeNet: Liberating Depth-wise Separable Operations for Building Faster Mobile 
+Vision Architectures</a>. AAAI Conference on Artificial Intelligence (AAAI 
+2025). (Acceptance rate: 23.4%) </font></p>
+<p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
 <span lang="en-us"><font size="5"><b>2024</b></font></span></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
 <font face="Times New Roman" size="4">&nbsp;3<span lang="en-us">43</span>. Hanlin Mo, <b>Guoying Zhao</b>.
