--- a/publications.htm
+++ b/publications.htm
@@ -218,7 +218,7 @@ Shi, Eija Vuorenmaa, </font>
 Collaborative Learning: An Interdisciplinary Multimodal Dataset</u>. ACM 
 Transactions on Interactive Intelligent Systems (TIIS). 2024.</font></p>
 <p class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
-<font size="4"><span lang="en-us">&nbsp;</span>332. Hao Yu, Xu Cheng, Hevin 
+<font size="4"><span lang="en-us">&nbsp;</span>332. Hao Yu, Xu Cheng, Kevin 
 Cheng, Wei Peng, Zitong Yu, <b>Guoying Zhao</b>. Discovering attention-guided 
 cross-modality correlation for visible-infrared person re-identification. 
 Pattern Recognition. 2024.</font></p>
