--- a/main_experience.htm
+++ b/main_experience.htm
@@ -106,7 +106,7 @@ time): CAD Center, North China University of Technology.</font></p>
 </ul>
 <p style="text-align: left; margin-bottom:0.5cm; line-height:150%">
 <b><span style="font-size: 14pt">
-Projects as PI or Co-PI (Raised in total ~11.3 million EUR for my team):</span></b></p>
+Projects as PI or Co-PI (Raised in total ~12 million EUR for my team):</span></b></p>
 <ul>
 	<li>
 	<p class="MsoListParagraphCxSpFirst" style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; line-height: 150%; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt; margin-bottom: 0cm">
@@ -122,10 +122,17 @@ Projects as PI or Co-PI (Raised in total ~11.3 million EUR for my team):</span><
 	funded by European Commission):</span></font><span style="color: black"><font size="4"> HORIZON-MSCA-SE-2022: Affective Computing Models: from Facial 
 	Expression to Mind-Reading (ACMod). 1 656 000 &#8364; (Consortium Coordinator)</font></span></li>
 	<li>
+	<p class="MsoListParagraph" style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; margin-left: 21.0pt; margin-right: 0cm; margin-top: 0cm; margin-bottom: 0cm">
+	<font size="4"><span style="color: black">2025.01-2027.12: <b>HPC project on 
+	FaceCanvas</b>. 700 031&#8364;. Research Council of Finland (RCF).</span></font></li>
+	<li>
 	<p class="MsoListParagraphCxSpFirst" style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; line-height: 150%; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt; margin-bottom: 0cm">
-	<font size="4"><span style="color: black">2023.01-2028.12: Funding to 
+	<span style="color: black">
+	<font size="4">2023.01-2028.12: Funding to 
 	strengthen university research profiles: <b>Profi-7 Hybrid Intelligence</b> 
-	(Vice director): 7.85M &#8364; (Academy of Finland &amp; University of Oulu).</span></font></li>
+	(Vice director): 7.8</font></span><font size="4"><span style="color: black">5M 
+	&#8364; (Research Council of Finland &amp; Unive</span></font><span style="color: black"><font size="4">rsity 
+	of Oulu).</font></span></li>
 	<li>
 	<p class="MsoListParagraphCxSpFirst" style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; line-height: 150%; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt; margin-bottom: 0cm">
 	<font size="4"><span style="color: black">
