--- a/teammembers.htm
+++ b/teammembers.htm
@@ -36,10 +36,10 @@ span.contentpasted0
 		<img border="0" src="Qing.jpg" width="132" height="165"></td>
 		<td width="226" height="0" align="center" valign="top">
 		<img border="0" src="Jukka.jpg" width="148" height="162"></td>
-		<td height="0" align="center" valign="top" width="209">
-		<img border="0" src="Hanlin.jpg" width="157" height="149"></td>
 		<td height="0" align="center" valign="top" width="224">
 		<img border="0" src="Qianru.jpg" width="153" height="150"></td>
+		<td height="0" align="center" valign="top" width="224">
+		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="184">
 		&nbsp;</td>
 	</tr>
@@ -57,28 +57,26 @@ span.contentpasted0
 		<span jsaction="agoMJf:PFBcW;MZfLnc:P7O7bd;nt4Alf:pvnm0e,pfE8Hb,PFBcW;B01qod:dJXsye;H1e5u:iXtTIf;lYIUJf:hij5Wb;bmeZHc:iURhpf;Oxj3Xe:qAKMYb,yaf12d" jsname="txFAF" class="jCAhz ChMk0b" jscontroller="Gn4SMb">
 		<span class="ryNqvb" jsaction="click:E6Tfl,GFf3ac,tMZCfe; contextmenu:Nqw7Te,QP7LD; mouseout:Nqw7Te; mouseover:E6Tfl,c2aHje" jsname="W297wb">
 		University lecturer</span></span></span></b><font face="Times New Roman"><b> </b></font></td>
-		<td height="0" align="center" valign="top" width="209">
-		<font face="Times New Roman"><b>Dr. Hanlin MO</b></font></td>
 		<td height="0" align="center" valign="top" width="224">
 		<font face="Times New Roman"><b>Dr. Qianru XU</b></font></td>
+		<td height="0" align="center" valign="top" width="224">
+		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="184">
 		&nbsp;</td>
 	</tr>
 	<tr>
-		<td height="0" align="center" valign="top" width="184">
-		<img border="0" src="Yang.jpg" width="148" height="147"></td>
 		<td height="0" align="center" valign="top" width="209">
 		<img border="0" src="Yante.jpg"></td>
 		<td height="0" align="center" valign="top" width="209">
 		<img border="0" src="Kejuan.jpg"></td>
 		<td height="0" align="center" valign="top" width="224">
 		<img border="0" src="Licai.jpg"></td>
+		<td height="0" align="center" valign="top" width="224">
+		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="222">
 		&nbsp;</td>
 	</tr>
 	<tr>
-		<td height="0" align="center" valign="top" width="184">
-		<font face="Times New Roman"><b>Dr. Yang LIU</b></font></td>
 		<td height="0" align="center" valign="top" width="209">
 		<b>
 		<font face="Times New Roman"><span lang="zh-cn">Dr</span>. Yante LI</font></b></td>
@@ -86,6 +84,8 @@ span.contentpasted0
 		<b><font face="Times New Roman">Dr. Kejuan YUE</font></b></td>
 		<td height="0" align="center" valign="top" width="224">
 		<b><span lang="en-us">Dr. Licai SUN</span></b></td>
+		<td height="0" align="center" valign="top" width="224">
+		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="222">
 		&nbsp;</td>
 	</tr>
@@ -147,10 +147,10 @@ span.contentpasted0
 		<font face="Times New Roman"><b>Mr. Haotian LIU</b></font></td>
 		<td width="222" height="0" align="center" valign="top">
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
-		<font face="Times New Roman"><b>Huai-Qian K</b></font><span lang="en-us"><b>HOR</b></span></td>
+		<font face="Times New Roman"><b><span lang="zh-cn">Mr. </span>Huai-Qian K</b></font><span lang="en-us"><b>HOR</b></span></td>
 		<td width="226" height="0" align="center" valign="top">
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
-		<font face="Times New Roman"><b>Ali S</b></font><span lang="en-us"><b>ALAR</b></span></td>
+		<font face="Times New Roman"><b><span lang="zh-cn">Mr. </span>Ali S</b></font><span lang="en-us"><b>ALAR</b></span></td>
 		<td height="0" align="center" valign="top" width="225">
 		<font face="Times New Roman"><b>Mr. Hao Y</b></font><span lang="en-us"><b><font face="Times New Roman">U</font></b></span><p style="text-align: center">
 		<span lang="en-us"><b>(ELLIS PhD student)</b></span></td>
@@ -264,13 +264,37 @@ embed;vertical-align:baseline">
 <table border="0" width="40%">
 	<tr>
 		<td width="226" height="0" align="center" valign="top">
+		<img border="0" src="Hanlin.jpg" width="157" height="149"></td>
+		<td height="0" align="center" valign="top" width="397">
+		<p style="text-align: center">&nbsp;</p>
+		<p style="text-align: center"><b>Dr. Hanlin Mo</b></p>
+		<p style="text-align: center">&nbsp;</p>
+		<p style="text-align: center"><span lang="en-us">Associate </span>
+		Professor</p>
+		<p style="text-align: center"><span lang="zh-cn">Xidian University</span></td>
+	</tr>
+	<tr>
+		<td width="226" height="0" align="center" valign="top">
+		<img border="0" src="Yang.jpg" width="148" height="147"></td>
+		<td height="0" align="center" valign="top" width="397">
+		&nbsp;<p style="text-align: center"><span lang="en-us"><b>&nbsp;</b></span><b><span lang="en-us">Dr. </span></b>
+		<span lang="en-us"><b>Yang Liu</b></span></p>
+		<p><span lang="en-us">&nbsp;</span></p>
+		<p style="text-align: center"><span lang="en-us">Postdoctoral researcher</span></p>
+		<p style="text-align: center"><span lang="en-us">&nbsp;</span>Stanford University<span lang="zh-cn">, USA</span></td>
+	</tr>
+	<tr>
+		<td width="226" height="0" align="center" valign="top">
 		<img border="0" src="Muzammil.jpg" width="139" height="142"></td>
 		<td height="0" align="center" valign="top" width="397">
-		&nbsp;<p style="text-align: center"><b><font face="Times New Roman">Dr. Muzammil BEHZAD</font></b></p>
+		&nbsp;<p style="text-align: center"><b><font face="Times New Roman">Dr. Muzammil B<span lang="zh-cn">ehzad</span></font></b></p>
 		<p>&nbsp;</p>
-		<p>
+		<p style="text-align: center">
 		<span class="ui-provider a b c d e f g h i j k l m n o p q r s t u v w x y z ab ac ae af ag ah ai aj ak" dir="ltr">
-		Assistant Professor in KFUPM, Saudi Arabia<span lang="zh-cn"> (Earlier
+		Assistant Professor </span>
+		<p style="text-align: center">
+		<span class="ui-provider a b c d e f g h i j k l m n o p q r s t u v w x y z ab ac ae af ag ah ai aj ak" dir="ltr">
+		&nbsp;KFUPM, Saudi Arabia<span lang="zh-cn"> (Earlier
 		</span></span>AI scientist<span lang="zh-cn"> with </span>Silo.AI<span lang="en-us">, Helsinki</span><span class="ui-provider a b c d e f g h i j k l m n o p q r s t u v w x y z ab ac ae af ag ah ai aj ak" dir="ltr"><span lang="zh-cn">)</span></span></td>
 	</tr>
 	<tr>
@@ -278,7 +302,7 @@ embed;vertical-align:baseline">
 		<img border="0" src="Khanh.jpg" width="154" height="143"></td>
 		<td height="0" align="center" valign="top" width="397">
 		&nbsp;<p style="text-align: center"><span lang="en-us"><b>
-		<font face="Times New Roman">D</font></b></span><b><font face="Times New Roman">r. Khanh TRAN-THUONG</font></b></p>
+		<font face="Times New Roman">D</font></b></span><b><font face="Times New Roman">r. Khanh T<span lang="zh-cn">ran</span>-T<span lang="zh-cn">huong</span></font></b></p>
 		<p>&nbsp;</p>
 		<p style="text-align: center">AI scientist</p>
 		<p style="text-align: center">Silo.AI<span lang="en-us">, Helsinki</span></td>
@@ -341,7 +365,7 @@ embed;vertical-align:baseline">
 		<td height="0" align="center" valign="top" width="397">
 		<b><font face="Times New Roman">Dr. H</font></b><font face="Times New Roman"><b>englin S<span lang="zh-cn">hi</span></b></font><p>&nbsp;</p>
 		<p style="text-align: center"><span lang="zh-cn">Postdoctoral researcher</span></p>
-		<p style="text-align: center"><span lang="zh-cn">ATMOS, University of Oulu, Finland</span></p></td>
+		<p style="text-align: center"><span lang="zh-cn">KTH, Sweden</span></p></td>
 	</tr>
 	<tr>
 		<td width="243" height="0" align="center" valign="top">
@@ -403,7 +427,7 @@ embed;vertical-align:baseline">
 		<img alt="Yingyue Xu" sizes="print 80px,128px" src="https://scholar.googleusercontent.com/citations?view_op=view_photo&user=K2Jdab0AAAAJ&citpid=3" id="gsc_prf_pup-img1" srcset="https://scholar.googleusercontent.com/citations?view_op=view_photo&amp;user=K2Jdab0AAAAJ&amp;citpid=3 128w,https://scholar.googleusercontent.com/citations?view_op=medium_photo&amp;user=K2Jdab0AAAAJ&amp;citpid=3 256w" width="148" height="150"></td>
 		<td height="84" align="center" valign="top" width="397">
 		<b>Dr. Yingyue Xu</b><p>&nbsp;</p>
-		<p style="text-align: center"><span lang="zh-cn">Postdoctoral researcher</span></p>
+		<p style="text-align: center"><span lang="zh-cn">Senior researcher</span></p>
 		<p>Zhuhai 
 	Innovation Institute, Fudan University</td>
 	</tr>
