--- a/publications.htm
+++ b/publications.htm
@@ -148,14 +148,25 @@ Jan. 2018.</font></p>
 <span lang="EN-US">
 <font size="4">Nov. 2020.</font></span></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
-<span lang="en-us"><font size="5"><b>2025</b></font></span></p>
+<span lang="en-us"><font size="5"><b>2025 </b></font></span></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
-<font face="Times New Roman" size="4">&nbsp;344. Hao Yu, Haoyu Chen, Wei Peng, 
+<font face="Times New Roman" size="4">&nbsp;346. </font>
+<font face="Times New Roman" size="4">Yan Jiang, Xu Cheng, Hao Yu, Xingyu Liu, 
+Haoyu Chen, <b>Guoying Zhao</b>. <u>DSAF: Dual Space Alignment Framework for 
+Visible-Infrared Person Re-Identification</u>. IEEE Transactions on Multimedia, 
+2025.</font></p>
+<p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
+<font face="Times New Roman" size="4">&nbsp;345. Hao Yu, Haoyu Chen, Wei Peng, 
 Xu Cheng, <b>Guoying Zhao</b>.
 <a target="_blank" href="https://openreview.net/forum?id=orSt7BTll2&referrer=%5BAuthor%20Console%5D(%2Fgroup%3Fid%3DAAAI.org%2F2025%2FConference%2FAuthors%23your-submissions)">
 FreeNet: Liberating Depth-wise Separable Operations for Building Faster Mobile 
 Vision Architectures</a>. AAAI Conference on Artificial Intelligence (AAAI 
 2025). (Acceptance rate: 23.4%) </font></p>
+<p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
+<font size="4">&nbsp;344. Hao Yu, Haoyu Chen, <b>Guoying Zhao</b>. <u>Learning 
+Binary-Antithetical Information Bottleneck for Generalizable Face Anti-Spoofing</u>. 
+IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP), 
+2025.</font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
 <span lang="en-us"><font size="5"><b>2024</b></font></span></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
@@ -191,8 +202,8 @@ for Sketch Re-Identification</u>. AAAI Conference on Artificial Intelligence (AA
 2024). (Acceptance rate: 23.75%)</font></font></p>
 <p class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
 <span lang="en-us"><font size="4">&nbsp;337. </font></span>
-<font face="Times New Roman" size="4">Marko Savic, <b>Guoying Zhao</b>. Remote-photoplethysmography 
-Physical Domain Attacks Database (RPDAD). ECCV 2024. (Acceptance rate: 27.9%)</font></p>
+<font face="Times New Roman" size="4">Marko Savic, <b>Guoying Zhao</b>. Oulu Remote-photoplethysmography 
+Physical Domain Attacks Database (ORPDAD). ECCV 2024. (Acceptance rate: 27.9%)</font></p>
 <p class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
 <font face="Times New Roman" size="4"><span lang="en-us">&nbsp;336. </span>Yan 
 Jiang, Xu Cheng, Hao Yu, Xingyu Liu, Haoyu Chen, <b>Guoying Zhao</b>. Domain 
@@ -302,8 +313,7 @@ Learning for Face Anti-Spoofing: A Survey</u>.&nbsp; </font></span>
 <font face="Times New Roman" size="4">IEEE Transactions on Pattern Analysis and 
 Machine Intelligence journal (TPAMI). 202<span lang="en-us">3</span>.</font></p>
 <p style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt" class="MsoPlainText">
-<span lang="en-us"><font face="Times New Roman" size="4">&nbsp;315. Tuomas 
-Varanka, Yante Li, Wei Peng, <b>Guoying Zhao</b>. </font></span>
+<span lang="en-us"><font face="Times New Roman" size="4">&nbsp;315. Tuomas Varanka, Yante Li, Wei Peng, <b>Guoying Zhao</b>. </font></span>
 <font face="Times New Roman" size="4"><u>Data Leakage and Evaluation Issues in 
 Micro-Expression Analysis</u>. IEEE Transactions on Affective Computing, 2023.</font></p>
 <p style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt" class="MsoPlainText">
@@ -627,8 +637,7 @@ Neurocomputing. 2021<span lang="en-us">.</span></font></p>
 Thuong-Khanh Tran, Quang-Nhat Vo, Xia<span lang="EN-US" style="line-height: 115%">openg Hong, Xiaobai Li, <b>Guoying Zhao</b>. <u>
 Micro-expression spotting: A new benchmark</u>. Neurocomputing, 2021.</span></font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">54</span>. Wei Peng, Jingang Shi, Tuomas 
-Varanka, <b>Guoying Zhao</b>. <u>Rethinking the ST-GCNs for 3D Skeleton-based 
+<font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">54</span>. Wei Peng, Jingang Shi, Tuomas Varanka, <b>Guoying Zhao</b>. <u>Rethinking the ST-GCNs for 3D Skeleton-based 
 Human Action Recognition</u>. Neurocomputing. 2021</font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
 <font face="Times New Roman" size="4">&nbsp;25<span lang="en-us">3</span>. Wei Peng, Jingang Shi, <b>Guoying Zhao</b>. 
