--- a/professional_activities.htm
+++ b/professional_activities.htm
@@ -445,7 +445,7 @@ Aug. 20-24, 2006, Hongkong.</font></span></p>
 <font size="4">18th Chinese Conference on Biometric Recognition (CCBR) 2024, 
 Nov. 22-24, Nanjing, China.</font></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt; margin-top: 8px; margin-bottom: 8px" class="MsoNormal">
-<font size="4">Earth &amp; Space£ºfrom Infrared to Terahertz International Conference 
+<font size="4">Earth &amp; Space: from Infrared to Terahertz International Conference 
 (ESIT) 2024, Sep. 20-22, Hangzhou, China.</font></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt; margin-top: 8px; margin-bottom: 8px" class="MsoNormal">
 <font size="4">IJCAI 2024 workshop on Deep Learning for Human Activity 
