--- a/publications.htm
+++ b/publications.htm
@@ -150,18 +150,43 @@ Jan. 2018.</font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
 <span lang="en-us"><font size="5"><b>2025 </b></font></span></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
-<font face="Times New Roman" size="4">&nbsp;346. </font>
+<font face="Times New Roman" size="4">&nbsp;351. Marko Savic, <b>Guoying Zhao</b>.
+<u>RS+rPPG: Robust Strongly Self-Supervised Learning for rPPG</u>. TCSVT, 2025.
+</font></p>
+<p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
+<font face="Times New Roman" size="4">&nbsp;350. </font>
 <font face="Times New Roman" size="4">Yan Jiang, Xu Cheng, Hao Yu, Xingyu Liu, 
 Haoyu Chen, <b>Guoying Zhao</b>. <u>DSAF: Dual Space Alignment Framework for 
 Visible-Infrared Person Re-Identification</u>. IEEE Transactions on Multimedia, 
 2025.</font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
-<font face="Times New Roman" size="4">&nbsp;345. Hao Yu, Haoyu Chen, Wei Peng, 
+<font face="Times New Roman" size="4">&nbsp;349. Shuyang Chu, Menghan Xia, 
+Mengyao Yuan, Xin Liu, Tapio Sepp&auml;nen, <b>Guoying Zhao</b>, Jingang Shi. Robust 
+Video-based Remote Physiological Measurement through Latent Codebook Querying. 
+IEEE Journal of Biomedical and Health Informatics. 2025.</font></p>
+<p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
+<font face="Times New Roman" size="4">&nbsp;348. Hao Yu, Haoyu Chen, Wei Peng, 
 Xu Cheng, <b>Guoying Zhao</b>.
 <a target="_blank" href="https://openreview.net/forum?id=orSt7BTll2&referrer=%5BAuthor%20Console%5D(%2Fgroup%3Fid%3DAAAI.org%2F2025%2FConference%2FAuthors%23your-submissions)">
 FreeNet: Liberating Depth-wise Separable Operations for Building Faster Mobile 
 Vision Architectures</a>. AAAI Conference on Artificial Intelligence (AAAI 
 2025). (Acceptance rate: 23.4%) </font></p>
+<p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
+<font size="4">&nbsp;347. </font><font face="Times New Roman" size="4">Ali Salar, 
+Qing Liu, Yingli Tian, <b>Guoying Zhao</b>. Enhancing Facial Privacy Protection 
+via Weakening Diffusion Purification. CVPR 2025. </font><font size="4">
+(Acceptance rate: 22.1%)</font></p>
+<p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
+<font size="4">&nbsp;346. Yante Li, Hanwen Qi, Haoyu Chen, Xinlian Liang, <b>
+Guoying Zhao</b>. Deep Change Monitoring: A Hyperbolic Representative Learning 
+Framework and A Dataset for Long-term Fine-grained Tree Change Detection. CVPR 
+2025. (Acceptance rate: 22.1%)</font></p>
+<div class="note-authors">
+	<p style="margin-top: 0.5cm; margin-bottom: 0.5cm" class="MsoNormal">
+	<font size="4" face="Times New Roman">&nbsp;345. Yan Jiang, Hao Yu, Xu 
+	Cheng, Haoyu Chen, Zhaodong Sun, <b>Guoying Zhao</b>. From Laboratory to 
+	Real World: A New Benchmark Towards Privacy-Preserved Visible-Infrared 
+	Person Re-Identification. CVPR 2025. (Acceptance rate: 22.1%)</font></div>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
 <font size="4">&nbsp;344. Hao Yu, Haoyu Chen, <b>Guoying Zhao</b>. <u>Learning 
 Binary-Antithetical Information Bottleneck for Generalizable Face Anti-Spoofing</u>. 
