--- a/teammembers.htm
+++ b/teammembers.htm
@@ -237,19 +237,19 @@ embed;vertical-align:baseline">
 	</tr>
 	<tr>
 		<td height="0" align="center" valign="top" width="225">
-		　<b><span lang="zh-cn">Mr. Yushun X</span></b><span lang="en-us"><b>IAO</b></span><p>&nbsp;</p>
-		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
-		<font face="Times New Roman"><b>Doctoral student</b></font></p>
-		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
-		<font face="Times New Roman"><b>Southeast University</b></font></p>
-		<p><span lang="zh-cn">Oct. 2023 - Sep. 2025</span></p></td>
+		<font face="Times New Roman"><b>　Mr. Yushun XIAO</b></font><p>&nbsp;</p>
+		<p>
+		<font face="Times New Roman">Doctoral student</font></p>
+		<p>
+		<font face="Times New Roman">Southeast University</font></p>
+		<p><font face="Times New Roman">Oct. 2023 - Sep. 2025</font></p></td>
 		<td height="0" align="center" valign="top" width="225">
-		<b>Mr. Jens GEBELE </b>
+		<b><font face="Times New Roman">Mr. Jens GEBELE </font> </b>
 		<p>&nbsp;</p>
-		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
-		<b><font face="Times New Roman">Doctoral researcher<br>
+		<p>
+		<font face="Times New Roman">Doctoral researcher<br>
 		<br>
-		Julius-Maximilians-Universität Würzburg</font></b></td>
+		Julius-Maximilians-Universität Würzburg</font></td>
 		<td height="0" align="center" valign="top" width="225">
 		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="184">
@@ -373,7 +373,8 @@ embed;vertical-align:baseline">
 		<img border="0" src="Kevin.jpg" width="149" height="148"></td>
 		<td height="0" align="center" valign="top" width="397">
 		<b>Dr. Kevin Cheng</b><p>&nbsp;</p>
-		<p style="text-align: center">Imaging Algorithm Engineer<p>Huawei Technologies Oy (Finland) Co., Ltd.</td>
+		<p><span lang="zh-cn">Senior lecturer, Hame University of Applied 
+		Sciences, Finland</span></td>
 	</tr>
 	<tr>
 		<td width="243" height="0" align="center" valign="top">
